fixed image resize on mobile

--- a/css/scss/_container.scss
+++ b/css/scss/_container.scss
@@ -42,6 +42,7 @@
 		margin-left: 20px;
 	}
 	img {
+		width: 100%;
 		max-width: 100%;
 	}
 }
